[package]
name = "snowball"
version = "0.1.3"
authors = ["Parth Desai <desaiparth08@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Generic implementation of Snowball consensus algorithm"
readme = "README.md"
keywords = ["blockchain", "Consensus", "Snowball", "BFT"]
repository = "https://github.com/ParthDesai/snowball"

[dependencies]
serde = "1.0"
crossbeam-channel = "0.4.3"
parking_lot = "0.11.0"